[gd_scene load_steps=11 format=1]

[ext_resource path="res://widgets/selector_widget/selector_widget.gd" type="Script" id=1]
[ext_resource path="res://fonts/ponyo/Ponyo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/lcd/LCD14.otf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.480469, 0.480469, 0.480469, 1 )
light_color = Color( 0.882813, 0.882813, 0.882813, 1 )
dark_color = Color( 0.234375, 0.234375, 0.234375, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0.226563, 0.226563, 0.226563, 1 )
dark_color = Color( 0.84375, 0.84375, 0.84375, 1 )
border_size = 1
border_blend = true
draw_bg = false

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0.226563, 0.226563, 0.226563, 1 )
dark_color = Color( 0.84375, 0.84375, 0.84375, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=4]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=7]

font/size = 42
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="widget" type="Node"]

script/script = ExtResource( 1 )

[node name="main_canvas" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 80.0

[node name="widget" type="Panel" parent="main_canvas"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="panel" type="Panel" parent="main_canvas"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 4.0
custom_styles/panel = SubResource( 2 )

[node name="panel1" type="Panel" parent="main_canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 30.0
margin/right = 100.0
margin/bottom = 70.0
custom_styles/panel = SubResource( 3 )

[node name="server_name_label" type="Label" parent="main_canvas"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 150.0
margin/bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "Server Name"
align = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="joystick_id" type="Label" parent="main_canvas"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 30.0
margin/right = 100.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 5 )
text = "00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="decrease_button" type="Button" parent="main_canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 50.0
margin/bottom = 70.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="increase_button" type="Button" parent="main_canvas"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 110.0
margin/top = 30.0
margin/right = 150.0
margin/bottom = 70.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false


